--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ tokio = { version = "1", features = ["full"] }
 serde_json = "1.0.134"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "2.0.17"
+serde_html_form = "0.4.0"
